[tool.poetry]
name = "trading-strategy-binder-env"
version = "0.1.0"
description = "Trading Strategy Binder environment"
authors = ["Hieu Nguyen <hieu@tradingstrategy.ai>"]
license = "APGL"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
trade-executor = {path = "./deps/trade-executor", develop = true}

# required by MyBinder
notebook = "^6.4.12"
jupyterlab = "^3.4.3"

# required to pull content from different repositories
nbgitpuller = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
